// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Column popover components in materialized view renders column popover components in materialized view with default options 1`] = `
<div
  className="euiPopover euiPopover--anchorDownCenter"
>
  <div
    className="euiPopover__anchor"
  >
    <button
      aria-label="add column"
      className="euiButtonEmpty euiButtonEmpty--primary euiButtonEmpty--xSmall"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      <span
        className="euiButtonContent euiButtonEmpty__content"
      >
        <svg
          aria-hidden={true}
          className="euiIcon euiIcon--small euiIcon--inherit euiIcon-isLoading euiButtonContent__icon"
          focusable="false"
          height={16}
          role="img"
          style={null}
          viewBox="0 0 16 16"
          width={16}
          xmlns="http://www.w3.org/2000/svg"
        />
        <span
          className="euiButtonEmpty__text"
        >
          Add Column
        </span>
      </span>
    </button>
  </div>
</div>
`;

exports[`Column popover components in materialized view renders column popover components in materialized view with different options 1`] = `
<div
  className="euiPopover euiPopover--anchorDownCenter"
>
  <div
    className="euiPopover__anchor"
  >
    <button
      aria-label="add column"
      className="euiButtonEmpty euiButtonEmpty--primary euiButtonEmpty--xSmall"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      <span
        className="euiButtonContent euiButtonEmpty__content"
      >
        <svg
          aria-hidden={true}
          className="euiIcon euiIcon--small euiIcon--inherit euiButtonContent__icon"
          focusable="false"
          height={16}
          role="img"
          style={null}
          viewBox="0 0 16 16"
          width={16}
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8 7h3.5a.5.5 0 1 1 0 1H8v3.5a.5.5 0 1 1-1 0V8H3.5a.5.5 0 0 1 0-1H7V3.5a.5.5 0 0 1 1 0V7Zm-.5-7C11.636 0 15 3.364 15 7.5S11.636 15 7.5 15 0 11.636 0 7.5 3.364 0 7.5 0Zm0 .882a6.618 6.618 0 1 0 0 13.236A6.618 6.618 0 0 0 7.5.882Z"
            fillRule="evenodd"
          />
        </svg>
        <span
          className="euiButtonEmpty__text"
        >
          Add Column
        </span>
      </span>
    </button>
  </div>
</div>
`;
